--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.8.2",
     "@astrojs/check": "^0.6.0",
+    "@astrojs/solid-js": "^4.2.0",
+    "astro": "^4.8.2",
+    "solid-js": "^1.8.17",
     "typescript": "^5.4.5"
   }
 }
